--- a/styles.css
+++ b/styles.css
@@ -1,76 +1,640 @@
 html{
-    font-size: 16px;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+  font-size: 16px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 body{
-    font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
+  font-family: 'Poppins', sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
 .header {
-    background-color: #ffe4bf;
-    width: 100%;
-    height: 180px;
-    margin: 0 auto;
+  background-color: #ffe4bf;
+  width: 100%;
+  height: 180px;
+  margin: 0 auto;
 }
-    .logo {
-    position: absolute;
-    top:5%;
-    left:5%;
-    max-width: 100vw;
-    height: auto;
+  .logo {
+  position: absolute;
+  top:5%;
+  left:5%;
+  max-width: 100vw;
+  height: auto;
 }
 
 .company-name {
-    position: absolute;
-    right: 8%;
-    top: 8%;
-    font-size: 1.2rem;
-    color: #0f102c;
+  position: absolute;
+  right: 8%;
+  top: 8%;
+  font-size: 1.2rem;
+  color: #0f102c;
 }
 .arabic-name {
-    position: relative;
-    margin-bottom: -5%;
-    margin-left: 45%;
+  position: relative;
+  margin-bottom: -5%;
+  margin-left: 45%;
 }
 
 
 .phone {
-    position: absolute;
-    top: 2%;
-    right: 20%;
+  position: absolute;
+  top: 2%;
+  right: 20%;
 }
 .phone-no {
-    position: relative;
-    margin-top: -22%;
-    margin-left: 15%;
-    white-space: nowrap;
+  position: relative;
+  margin-top: -22%;
+  margin-left: 15%;
+  white-space: nowrap;
 }
 
 .languages {
-    position: absolute;
-    top: 2.5%;
-    right: 10%;
+  position: absolute;
+  top: 2.5%;
+  right: 10%;
 }
 .lang-text{
-    position: relative;
-    margin-top: -45%;
-    margin-left: 42%;
+  position: relative;
+  margin-top: -45%;
+  margin-left: 42%;
 }
 
 .lang-text,.phone-no {
-    font-size: 1rem;
-    color: #0f102c;
+  font-size: 1rem;
+  color: #0f102c;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 200px) {
+  .header{
+      height: 210px;
+  }
+ .logo {
+  top: 1%;
+ }
+ .company-name {
+  font-size: 0.8rem;
+  top: 9%;
+  margin-left: 5%;
+ }
+ .phone{
+  right: 8%;
+ }
+ .languages{
+  top: 7%;
+  right:25%;
+ }
+ .lang-text,.phone-no {
+  font-size: 0.8rem;
+ }
+}
+
+.nav-container nav{
+  width: 100%;
+  height: 49px;
+  background-color: #0f102c;
+}
+nav ul {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  list-style: none;
+  transition: all 0.5s ease;
+}
+nav ul li a{
+  color: #ffe4bf;
+  font-size: 1rem;
+  text-decoration: none;
+}
+nav ul li {
+  width: 6%;
+  float: left;
+  text-align: center;
+  padding: 12px 50px;
+  cursor: pointer;
+  color: #eee;
+  transition: all 0.5s ease;
+  position: relative;
+}
+
+nav ul li:hover {
+  background-color: #e28225;
+}
+
+/* sub-menu */
+
+nav ul li ul.prod-drop {
+  position: absolute;
+  top: 49px;
+  left: 0;
+  width: 250%;
+  height: 275px;
+  background: #444759;
+  border-top: 1px solid #3d3f50;
+  visibility: hidden;
+  opacity: 0;
+  columns: 2;
+  z-index: 1;
+}
+
+nav ul li ul.prod-drop li {
+  font-size: 14px;
+  width: 100%;
+  padding: 15px 0;
+  margin-left:-10%;
+}
+
+
+nav ul li:hover ul.prod-drop{
+  visibility: visible;
+  opacity: 1;
+}
+
+.search{
+  position: relative;
+  display: inline-block;
+  float: right;
+  margin-top: -2%;
+  margin-right: 15%;
+}
+.search-box,.search-icon {
+  background-color: #0f102c;
+}
+.search-box{
+  position: relative;
+  height: 25px;
+  width: 220px;
+  border-radius: 15px;
+  border: 1px solid #ffe4bf;
+  box-sizing: border-box;
+}
+.search-icon {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border: 0;
+  display: block;
+  padding: 0;
+}
+input, select, textarea {
+  color: #ffe4bf;
+}
+
+.slider {
+  width: 100%;
+  height: 610px;
+  position: relative;
+  z-index: -1;
+}
+
+.slider img {
+  width: 100%;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.slider img:first-child {
+  z-index: 1;
+}
+
+.slider img:nth-child(2) {
+  z-index: 0;
+}
+.navigation-button {
+  text-align: center;
+  position: relative;
+}
+
+.dot {
+  cursor: pointer;
+  height: 8px;
+  width: 25px;
+  margin: 0 2px;
+  background-color: #e28225;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.active,
+.dot:hover {
+  background-color: #0f102c;
+}
+
+.about-head1 {
+color: #0f102c;
+font-size: 3rem;
+text-align: center;
+}
+.about-container {
+background-color: #0f102c;
+width: 50%;
+padding: 1% 2% 0% 7%;
+}
+.about-head2, .vision-head{
+color: #eee;
+font-size: 4rem;
+font-weight: 900;
+line-height: 110%;
+}
+#second-text,#second-vis{
+font-size: 5rem;
+}
+.about-para {
+color: #eee; 
+text-align: justify;
+}
+.thumbsup-guy {
+margin-left: 5.4%;
+position: relative;
+margin-top: -69%;
+width: 120%;
+}
+.about-boxes {
+width: 35%;
+margin-left: 60%;
+margin-top: -31%;
+mix-blend-mode: multiply;
+}
+
+.vision-img {
+width: 100%;
+margin-top: -3%;
+}
+.vision-head {
+color: #ffe4bf;
+text-align: right;
+margin-top: -30%;
+margin-right: 8%;
+}
+.vision-para-cont {
+width: 41%;
+margin-left: 51%;
+}
+.vision-para {  
+color: #ead1b1;
+text-align: justify;
+text-align-last: right;
 }
 
 
 
+.manpow-head {
+color: #1c1c1d;
+text-align: center;
+font-size: 3rem;
+margin-top: 5%;
+}
+.manpowpara-cont {
+width: 48%;
+margin: auto;
+margin-top: -2%;
+}
+.manpow-para {
+text-align: center;
+font-size: 1rem;
+color: #3d3f50;
+word-wrap: break-word;
+}
+
+@media screen and (max-width: 1600px) and (min-width: 1200px) {
+.vision-para {
+  font-size: 0.8rem;
+}
+.vision-img{
+  height: 600px;
+}
+.vision-cont {
+  margin-top: -40%;
+}
+.manpow-head{
+  margin-top: 10%;
+}
+}
+
+.prod-head1 {
+color: #0f102c;
+text-align: center;
+font-size: 3rem;
+}
+.prod-head2 {
+color: #1c1c1d;
+font-size: 3rem;
+font-weight: 500;
+text-align: center;
+margin-top: -2%;
+}
+
+.fab-images {
+display: flex;
+flex-wrap: wrap;
+}
+
+.fab-list {
+height: 40vh;
+flex-grow: 1;
+list-style: none;
+}
+.fab-img {
+max-height: 80%;
+min-width: 80%;
+object-fit: cover;
+vertical-align: bottom;
+}
+.fab-text {
+font-size: 1rem;
+font-weight: 600;
+text-align: center;
+margin-left: -10%;
+}
+
+.pv-solar-cont {
+background-color: #ffe4bf;
+padding: 2% 2% 2% 5%;
+width: 92vw;
+min-height: 100vh;
+}
+.pv-solar-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.pv-solar-images {
+display: flex;
+flex-wrap: wrap;
+}
+.pv-solar-list {
+height: 40vh;
+flex-grow: 1;
+list-style: none;
+margin-top: 5%;
+}
+.pv-solar-img {
+max-height: 90%;
+min-width: 70%;
+object-fit: cover;
+vertical-align: bottom;
+border-radius: 25px;
+border-top: 8px solid #e28225;
+border-bottom: 8px solid #787879;
+}
+.fig-pv-cont {
+width: 70%;
+}
+.pv-solar-text {
+font-size: 1rem;
+font-weight: 600;
+text-align: center;
+margin-left: 15%;
+margin-top: 2%;
+}
+
+.power-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.power-images {
+display: flex;
+flex-wrap: wrap;
+margin-left: 10%;
+}
+.power-list {
+height: 40vh;
+flex-grow: 1;
+list-style: none;
+}
+.power-img {
+max-height: 80%;
+min-width: 80%;
+object-fit: contain;
+vertical-align: bottom;
+}
+
+.pipes-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.pipes-text {
+color: #383838;
+font-size: 1.2rem;
+font-weight: 600;
+text-align: center;
+margin-top: 9%;
+margin-left: -29%;
+}
+
+.down-semi {
+width:250px;
+height: 120px;
+border-radius: 0 0 12rem 12rem;
+border-bottom: solid 12px #e28225;
+border-left: solid 12px #e28225;
+border-right: solid 12px #e28225;
+background-color: #0f102c;
+display: flex;
+justify-content: center;
+}
+.pipes-img {
+width: 100%;
+height:200%;
+margin-top: -55%;
+}
+
+.up-semi {
+width:250px;
+height: 120px;
+border-radius: 12rem 12rem 0 0;
+border-top: solid 12px #e28225;
+border-left: solid 12px #e28225;
+border-right: solid 12px #e28225;
+background-color: #0f102c;
+display: flex;
+justify-content:center;
+}
+.pipes-images {
+display: flex;
+flex-wrap: wrap;
+column-gap: 300px;
+row-gap: 200px;
+margin-left: 16%;
+margin-top: 8%;
+}
+
+.welding-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.welding-images {
+display: flex;
+flex-wrap: wrap;
+column-gap: 300px;
+row-gap: 100px;
+margin-left: 15%;
+margin-top: 5%;
+}
+.welding-img {
+width: 100%;
+height:200%;
+margin-left: 6%;
+margin-top: -5%;
+}
+.welding-text {
+color: #383838;
+font-size: 1.2rem;
+font-weight: 600;
+text-align: center;
+margin-top: 13%;
+margin-left: -29%;
+}
+
+.safety-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.safety-images {
+display: flex;
+flex-wrap: wrap;
+column-gap: 300px;
+row-gap: 100px;
+margin-left: 16%;
+margin-top: 5%;
+}
+.safety-img {
+width: 100%;
+height:150%;
+margin-left: 6%;
+margin-top: -5%;
+}
+.safety-text {
+color: #383838;
+font-size: 1.2rem;
+font-weight: 600;
+text-align: center;
+margin-top: 12%;
+margin-left: -29%;
+}
+
+.building-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.building-images {
+display: flex;
+flex-wrap: wrap;
+column-gap: 300px;
+row-gap: 100px;
+margin-left: 15%;
+margin-top: 5%;
+}
+.building-img {
+width: 100%;
+height:150%;
+margin-left: 6%;
+}
+.building-text {
+color: #383838;
+font-size: 1.2rem;
+font-weight: 600;
+text-align: center;
+margin-top: 13%;
+margin-left: -29%;
+}
+
+.office-head {
+font-size: 3rem;
+text-align: center;
+color: #1c1c1d;
+}
+.office-images {
+display: flex;
+flex-wrap: wrap;
+column-gap: 300px;
+row-gap: 100px;
+margin-left: 15%;
+margin-top: 5%;
+}
+.office-img {
+width: 100%;
+height:150%;
+margin-left: 6%;
+margin-top: -5%;
+}
+.office-text {
+color: #383838;
+font-size: 1.2rem;
+font-weight: 600;
+text-align: center;
+margin-top: 12%;
+margin-left: -29%;
+}
+
+.uniform-cont {
+  padding: 2% 10% 2% 12%;
+  margin-left:3%;
+  }
+  .uniform-head {
+  font-size: 3rem;
+  text-align: center;
+  color: #1c1c1d;
+  }
+  .uniform-images {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 5%;
+  }
+  .uniform-list {
+  height: 40vh;
+  flex-grow: 1;
+  list-style: none;
+  margin-top: 5%;
+  }
+  .uniform-img {
+  max-height: 70%;
+  min-width: 70%;
+  object-fit: cover;
+  vertical-align: bottom;
+  border-radius: 25px;
+  border-top: 8px solid #e28225;
+  border-bottom: 8px solid #787879;
+  }
+  .fig-uniform-cont {
+  width: 70%;
+  }
+  .uniform-text {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: center;
+  margin-left: 15%;
+  margin-top: 10%;
+  }
+
+
+  .partner-head {
+    font-size: 3rem;
+    text-align: center;
+    color: #1c1c1d;
+    }
+  .partner-images {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 200px;
+    margin-left: 20%;
+  }
+  .partner-img {
+    width: 18%;
+    height: 18%;
+    margin-top: 5%;
+  }
+
 .dwnld_bt{
   position: relative;
-  margin-top: 25%; 
-  /* height:200px;  */
+  margin-top: 5%; 
   width:100%;
   background-color:antiquewhite;
   padding: 1% 10% 1% 10%;
@@ -89,451 +653,124 @@ body{
   margin-left: 20%;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 200px) {
-    .header{
-        height: 210px;
-    }
-   .logo {
-    top: 1%;
-   }
-   .company-name {
-    font-size: 0.8rem;
-    top: 9%;
-    margin-left: 5%;
-   }
-   .phone{
-    right: 8%;
-   }
-   .languages{
-    top: 7%;
-    right:25%;
-   }
-   .lang-text,.phone-no {
-    font-size: 0.8rem;
-   }
-}
-
-.nav-container nav{
-    width: 100%;
-    height: 49px;
-    background-color: #0f102c;
-}
-nav ul {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    list-style: none;
-    transition: all 0.5s ease;
-  }
-  nav ul li a{
-    color: #ffe4bf;
-    font-size: 1rem;
-    text-decoration: none;
-  }
-  nav ul li {
-    width: 6%;
-    float: left;
-    text-align: center;
-    padding: 12px 50px;
-    cursor: pointer;
-    color: #eee;
-    transition: all 0.5s ease;
-    position: relative;
-  }
-
-  nav ul li:hover {
-    background-color: #e28225;
-  }
-  
-  /* sub-menu */
-  
-  nav ul li ul.prod-drop {
-    position: absolute;
-    top: 49px;
-    left: 0;
-    width: 250%;
-    height: 275px;
-    background: #444759;
-    border-top: 1px solid #3d3f50;
-    visibility: hidden;
-    opacity: 0;
-    columns: 2;
-    z-index: 1;
-  }
-  
-  nav ul li ul.prod-drop li {
-    font-size: 14px;
-    width: 100%;
-    padding: 15px 0;
-    margin-left:-10%;
-  }
-  
-  
-  nav ul li:hover ul.prod-drop{
-    visibility: visible;
-    opacity: 1;
-  }
-
-.search{
-    position: relative;
-    display: inline-block;
-    float: right;
-    margin-top: -2%;
-    margin-right: 15%;
-}
-.search-box,.search-icon {
-    background-color: #0f102c;
-}
-.search-box{
-    position: relative;
-    height: 25px;
-    width: 220px;
-    border-radius: 15px;
-    border: 1px solid #ffe4bf;
-    box-sizing: border-box;
-}
-.search-icon {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-    border: 0;
-    display: block;
-    padding: 0;
-}
-input, select, textarea {
-    color: #ffe4bf;
-}
-
-.slider {
-    width: 100%;
-    height: 610px;
-    position: relative;
-    z-index: -1;
-  }
-  
-  .slider img {
-    width: 100%;
-    height: 600px;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  .slider img:first-child {
-    z-index: 1;
-  }
-  
-  .slider img:nth-child(2) {
-    z-index: 0;
-  }
-  .navigation-button {
-    text-align: center;
-    position: relative;
-  }
-  
-  .dot {
-    cursor: pointer;
-    height: 8px;
-    width: 25px;
-    margin: 0 2px;
-    background-color: #e28225;
-    border-radius: 5px;
-    display: inline-block;
-  }
-  
-  .active,
-  .dot:hover {
-    background-color: #0f102c;
-}
-
-.about-head1 {
-  color: #0f102c;
-  font-size: 3rem;
-  text-align: center;
-}
-.about-container {
-  background-color: #0f102c;
-  width: 50%;
-  padding: 1% 2% 0% 7%;
-}
-.about-head2, .vision-head{
-  color: #eee;
-  font-size: 4rem;
-  font-weight: 900;
-  line-height: 110%;
-}
-#second-text,#second-vis{
-  font-size: 5rem;
-}
-.about-para {
-  color: #eee; 
-  text-align: justify;
-}
-.thumbsup-guy {
-  margin-left: 5.4%;
-  margin-top: -69%;
-  width: 120%;
-}
-.about-boxes {
-  width: 35%;
-  margin-left: 60%;
-  margin-top: -31%;
-  mix-blend-mode: multiply;
-}
-
-.vision-img {
-  width: 100%;
-  margin-top: -3%;
-}
-.vision-head {
-  color: #ffe4bf;
-  text-align: right;
-  margin-top: -30%;
-  margin-right: 8%;
-}
-.vision-para-cont {
-  width: 41%;
-  margin-left: 51%;
-}
-.vision-para {  
-  color: #ead1b1;
-  text-align: justify;
-  text-align-last: right;
-}
-
-
-
-.manpow-head {
-  color: #1c1c1d;
-  text-align: center;
-  font-size: 3rem;
-  margin-top: 5%;
-}
-.manpowpara-cont {
-  width: 48%;
-  margin: auto;
-  margin-top: -2%;
-}
-.manpow-para {
-  text-align: center;
-  font-size: 1rem;
-  color: #3d3f50;
-  word-wrap: break-word;
-}
-
-@media screen and (max-width: 1600px) and (min-width: 1200px) {
-  .vision-para {
-    font-size: 0.8rem;
-  }
-  .vision-img{
-    height: 600px;
-  }
-  .vision-cont {
-    margin-top: -40%;
-  }
-  .manpow-head{
-    margin-top: 10%;
-  }
-}
-
-.prod-head1 {
-  color: #0f102c;
-  text-align: center;
-  font-size: 3rem;
-}
-.prod-head2 {
-  color: #1c1c1d;
-  font-size: 3rem;
-  font-weight: 500;
-  text-align: center;
-  margin-top: -2%;
-}
-
-.fab-images {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.fab-list {
-  height: 40vh;
-  flex-grow: 1;
-  list-style: none;
-}
-.fab-img {
-  max-height: 80%;
-  min-width: 80%;
-  object-fit: cover;
-  vertical-align: bottom;
-}
-.fab-text {
-  font-size: 1rem;
-  font-weight: 600;
-  text-align: center;
-  margin-left: -10%;
-}
-
-.pv-solar-cont {
-  background-color: #ffe4bf;
-  padding: 2% 10% 2% 10%;
-}
-.pv-solar-head {
+.contact-head {
   font-size: 3rem;
   text-align: center;
   color: #1c1c1d;
 }
-.pv-solar-images {
-  display: flex;
-  flex-wrap: wrap;
-}
-.pv-solar-list {
-  height: 40vh;
-  flex-grow: 1;
-  list-style: none;
-  margin-top: 5%;
-}
-.pv-solar-img {
-  max-height: 90%;
-  min-width: 70%;
-  object-fit: cover;
-  vertical-align: bottom;
-  border-radius: 25px;
-  border-top: 8px solid #e28225;
-  border-bottom: 8px solid #787879;
-}
-.fig-pv-cont {
-  width: 70%;
-}
-.pv-solar-text {
-  font-size: 1rem;
-  font-weight: 600;
-  text-align: center;
-  margin-left: 15%;
-  margin-top: 2%;
-}
 
-.power-head {
-  font-size: 3rem;
-  text-align: center;
-  color: #1c1c1d;
-}
-.power-images {
-  display: flex;
-  flex-wrap: wrap;
+.form-head{
+  font-size: 2rem;
+  font-weight: 400;
   margin-left: 10%;
 }
-.power-list {
-  height: 40vh;
-  flex-grow: 1;
-  list-style: none;
+.form-label {
+  margin-left: 10%;
+  font-weight: 300;
 }
-.power-img {
-  max-height: 80%;
-  min-width: 80%;
-  object-fit: contain;
-  vertical-align: bottom;
-}
-
-.pipes-head {
-  font-size: 3rem;
-  text-align: center;
+.form-control {
+  width: 25%;
+  padding: 1%;
+  margin-left: 10%;
+  margin-top: 1%;
+  font-size: 1rem;
+  border-radius: 10px;
+  border: 1px solid #1c1c1d;
   color: #1c1c1d;
 }
-.pipes-text {
-  color: #383838;
+.submit {
+  width: 8%;
+  background-color: white;
+  color: #1c1c1d;
+  text-align: center;
+}
+
+.contact-add {
+  margin-left: 60%;
+  margin-top: -35%;
   font-size: 1.2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 9%;
-  margin-left: -29%;
+}
+.add-icon {
+  margin-left: -2%;
+ position: absolute;
+ margin-top: 0.2%;
 }
 
-.down-semi {
-  width:250px;
-  height: 120px;
-  border-radius: 0 0 12rem 12rem;
-  border-bottom: solid 12px #e28225;
-  border-left: solid 12px #e28225;
-  border-right: solid 12px #e28225;
+.contact-enquiries {
+  margin-left: 60%;
+  font-size: 1.2rem;
+}
+.enq-icon {
+  margin-left: -2%;
+ position: absolute;
+ margin-top: 0.2%;
+}
+.enq {
+  margin-top: -2%;
+}
+
+.contact-call {
+  margin-left: 60%;
+  font-size: 1.2rem;
+}
+.call-icon {
+  margin-left: -2%;
+ position: absolute;
+ margin-top: 0.2%;
+}
+.call {
+  margin-top: -2%;
+}
+
+.contact-website {
+  margin-left: 60%;
+  margin-top: -1%;
+  font-size: 1.2rem;
+}
+.web-icon {
+  margin-left: -2%;
+ position: absolute;
+ margin-top: 0.2%;
+}
+.web {
+  margin-top: -2%;
+}
+
+footer {
   background-color: #0f102c;
-  display: flex;
-  justify-content: center;
+  position: relative;
+  bottom: -250px;
+  padding: 5%;
+  padding-bottom: 10px;
 }
-.pipes-img {
-  width: 100%;
-  height:200%;
-  margin-top: -55%;
+.quick-links {
+  margin-left: 3%;
+  margin-top: -2%;
+  color: white;
 }
-
-.up-semi {
-  width:250px;
-  height: 120px;
-  border-radius: 12rem 12rem 0 0;
-  border-top: solid 12px #e28225;
-  border-left: solid 12px #e28225;
-  border-right: solid 12px #e28225;
-  background-color: #0f102c;
-  display: flex;
-  justify-content:center;
-}
-.pipes-images {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 300px;
-  row-gap: 200px;
-  margin-left: 16%;
-  margin-top: 8%;
+.links{
+  color: gray;
+  text-decoration: none;
 }
 
-.welding-head {
-  font-size: 3rem;
-  text-align: center;
-  color: #1c1c1d;
+.location {
+  margin-left: 80%;
+  margin-top: -15%;
 }
-.welding-images {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 300px;
-  row-gap: 100px;
-  margin-left: 12%;
+.location-head {
+  color: white;
+  font-size: 1.2rem;
+}
+
+.copyright {
+  color: rgb(161, 161, 161);
   margin-top: 5%;
-}
-.welding-img {
-  width: 100%;
-  height:200%;
-  margin-left: 6%;
-}
-.welding-text {
-  color: #383838;
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 14%;
-  margin-left: -29%;
+  margin-left: 3%;
 }
 
-.safety-head {
-  font-size: 3rem;
-  text-align: center;
-  color: #1c1c1d;
+.back-home {
+  position: relative;
+  margin-left: 95%;
+  top: -100px;
 }
-.safety-images {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 300px;
-  row-gap: 100px;
-  margin-left: 16%;
-  margin-top: 8%;
-}
-.safety-img {
-  width: 100%;
-  height:200%;
-  margin-left: 6%;
-}
-.safety-text {
-  color: #383838;
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 14%;
-  margin-left: -29%;
-}
+
